# neofetch

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  package.json  readme.md
.github/workflows/: ci.yml  release.yml
assets/: ax6000.ans  openwrt.ans  perf-android.ans  perf-ubuntu.ans  perf-windows.ans  ubuntu.ans  update-svg.sh  win11.ans
src/: battery.rs  color.rs  cpu.rs  de.rs  disk.rs  display.rs  error.rs  gpu.rs  host.rs  hostname.rs  icon.rs  ip.rs  kernel.rs  lib.rs  locale.rs  main.rs  mappings.rs  memory.rs  network.rs  os.rs  packages.rs  resolution.rs  share.rs  shell.rs  system.rs  temperature.rs  terminal.rs  uptime.rs  user.rs  wm.rs
src/platform/: android.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/utils/: file.rs  mod.rs  platform.rs  process.rs
