[package]
name = "neofetch"
version = "0.1.7"
edition = "2024"
repository = "https://github.com/ahaoboy/neofetch"
license = "MIT"
description = "neofetch"
homepage = "https://github.com/ahaoboy/neofetch"
authors = ["ahaoboy"]

[dependencies]
human_bytes = "0.4"
regex = "1"
ansi-width = "0.1"
which-shell = { version = "0.1", git = "https://github.com/ahaoboy/which-shell" }
tokio = { version = "1", features = ["full"] }
dirs = "6"

[target.'cfg(not(target_os = "android"))'.dependencies]
display-info = { version = "0.5", git = "https://github.com/nashaofu/display-info.git" }

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "*"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
winreg = "0.55"
windows = { version = "0.61", features = [
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_Foundation",
] }

# The profile that 'cargo dist' will build with
[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1
